<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/auth_nav_graph"
    app:startDestination="@id/signInFragment">

    <fragment
        android:id="@+id/signInFragment"
        android:name="com.dressden.ui.auth.SignInFragment"
        android:label="@string/sign_in"
        tools:layout="@layout/fragment_sign_in">
        <action
            android:id="@+id/action_signIn_to_signUp"
            app:destination="@id/signUpFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
        <action
            android:id="@+id/action_signIn_to_forgotPassword"
            app:destination="@id/forgotPasswordFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/signUpFragment"
        android:name="com.dressden.ui.auth.SignUpFragment"
        android:label="@string/sign_up"
        tools:layout="@layout/fragment_sign_up">
        <action
            android:id="@+id/action_signUp_to_signIn"
            app:destination="@id/signInFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/signInFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/forgotPasswordFragment"
        android:name="com.dressden.ui.auth.ForgotPasswordFragment"
        android:label="@string/forgot_password"
        tools:layout="@layout/fragment_forgot_password">
        <action
            android:id="@+id/action_forgotPassword_to_signIn"
            app:destination="@id/signInFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@id/signInFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <action
        android:id="@+id/action_global_signIn"
        app:destination="@id/signInFragment"
        app:enterAnim="@anim/nav_default_enter_anim"
        app:exitAnim="@anim/nav_default_exit_anim"
        app:popEnterAnim="@anim/nav_default_pop_enter_anim"
        app:popExitAnim="@anim/nav_default_pop_exit_anim"
        app:popUpTo="@id/auth_nav_graph"
        app:popUpToInclusive="true" />

</navigation>
